# Native-Anti-Tamper

./: .gitignore  README.md
app/: build.gradle
app/src/androidTest/java/com/tcn/demo/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/com/tcn/demo/: AntiDebugManager.java  AntiDebugService.java  FirstFragment.java  MainActivity.java  SecondFragment.java
app/src/main/jni/: CMakeLists.txt  anti_debug.cpp  anti_debug.h  log.h
app/src/main/res/layout/: activity_main.xml
app/src/main/res/menu/: menu_main.xml
app/src/main/res/navigation/: nav_graph.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/tcn/demo/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
